--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6.20.1",
     "styled-components": "6.1.1",
-    "sweetalert2": "11.10.1"
+    "sweetalert2": "11.10.1",
+    "tw-elements": "1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
