--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.20.1",
+    "react-select": "5.8.0",
     "styled-components": "6.1.1",
     "sweetalert2": "11.10.1",
     "tw-elements": "1.1.0"
