--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.6.2",
     "formik": "2.4.5",
     "html2pdf.js": "0.10.1",
+    "js-cookie": "3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.20.1",
