--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-select": "5.8.0",
     "styled-components": "6.1.1",
     "sweetalert2": "11.10.1",
-    "tw-elements": "1.1.0"
+    "sweetalert2-react-content": "5.0.7",
+    "tw-elements": "1.1.0",
+    "yup": "1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
