--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "1.6.2",
+    "date-fns": "3.0.6",
     "formik": "2.4.5",
     "html2pdf.js": "0.10.1",
     "js-cookie": "3.0.5",
